<resources>

    <string name="app_name">Orangizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_events">My Events</string>
    <string name="events_no_events">No Events, Press + above to add one.</string>
    <string name="events_fetch_failed">Impossible to fetch Events, check connectivity.</string>
    <string name="events_menu_refresh">Refresh</string>
    <string name="events_menu_add">Add</string>
    <string name="event_activity_name">Event</string>
    <string name="event_attending">%d Guests</string>
    <string name="event_attending_error">Failed to fetch attendees for that event.</string>
    <string name="event_remind">Remind the guests</string>
    <string name="event_whosinviting">WHO\'S INVITING</string>
    <string name="event_where">WHERE</string>
    <string name="event_whoscoming">WHO\'S COMING</string>
    <string name="event_what">WHAT</string>
    <string name="event_when">WHEN</string>
    <string name="event_map">Show on map</string>
    <string name="event_remind_ok">%d attendees have succesfully been reminded by SMS!</string>
    <string name="event_remind_ko">Attendees could not be contacted, do you have their phone numbers in your address book?</string>

    <!-- Create New Event Activity -->
    <string name="create_new_event">New Event</string>
    <string name="create_event_name_hint">Name</string>
    <string name="create_event_description_hint">Details</string>
    <string name="create_event_time">Time</string>
    <string name="create_event_date">Date</string>
    <string name="create_event_done">Done</string>
    <string name="create_event_howlong">Duration</string>
    <string name="create_event_howlong_default">1 hour</string>
    <string name="create_event_address_hint">Location</string>
    <string name="create_event_success">Event has been successfuly posted</string>
    <string name="create_event_ko">Event could not been posted, please retry.</string>
    <string name="create_event_posting">Posting on Facebook, please wait&#8230;</string>
    <string name="create_event_pick_guests">Invite your friends.</string>
    <string name="create_event_attendees">%d Guests</string>

    <string name="title_activity_choose_guests">Invite your friends</string>
    <string name="choose_guests_no_fb_friends">No Facebook Friends</string>
    <string name="title_section2">Facebook Friends</string>
    <string name="title_section1">Address Book</string>
</resources>